feat: criando swagger products
